# album-genre-classifier

./: .cache  .gitignore  README.md  pyproject.toml
data/: albums_raw.csv  artists_raw.csv  spotify_cache.json
notebooks/: .cache  01_data_collection.ipynb
src/: artists.json  cover_downloader.py  spotify_scraper.py
